# Cooking

./: README.md  db.sqlite3  info.txt  pyproject.toml  requirements.txt
config/: settings.py  urls.py
cooking/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
cooking/migrations/: 0001_initial.py  0002_alter_category_options_alter_post_options_and_more.py  0003_post_author.py
cooking/templates/Cooking/: add_post.html  article_add_form.html  article_detail.html  delete_post.html  detail_page.html  index.html  login.html  login_form.html  password_change_form.html  post_confirm_delete.html  profile.html  profile1.html  register.html  register_form.html
cooking/templates/Cooking/components/: _post_list.html
cooking/templates/swagger/: swagger_ui.html
cooking/templatetags/: blog_tags.py
frontend/: package-lock.json
frontend/.next/: trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/chunks/: [root of the server]__022459._.js.map  node_modules_next_c84c4b._.js.map
frontend/.next/static/chunks/: [next]_internal_font_google_roboto_mono_a0c1c46e_module_b52d8e.css  [next]_internal_font_google_roboto_mono_a0c1c46e_module_b52d8e.css.map  _4c0796._.js  (+25 more)
photos/: scale_1200.jfif
templates/: base.html
templates/components/: _footer.html  _form_errors.html  _messages.html  _navbar.html
wHTML/: index.html  login.html  register.html
(+34 files in other folders)
